--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	compile("org.hsqldb:hsqldb")
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-security")
+	compile("com.auth0:java-jwt:3.4.0")
+	compile("com.auth0:auth0-spring-security-api:1.0.0-rc.3")
+	compile("org.projectlombok:lombok:1.18.10")
+	
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 	implementation 'org.springframework.boot:spring-boot-starter'
